--- a/README.adoc
+++ b/README.adoc
@@ -14,18 +14,18 @@
 3. 仮想環境をアクティブにする。
 `venv\Scripts\activate`
 
-4. `requirements.txt` から依存関係をインストールする。
+4. requirements.txtから依存関係をインストールする。
 `pip install -r requirements.txt`
 
 == 実行ファイルの作成
-1. `OMS_Document_Check_Tool.spec` ファイルを使用して実行ファイルを作成する。
+1. OMS_Document_Check_Tool.specファイルを使用して実行ファイルを作成する。
 `pyinstaller OMS_Document_Check_Tool.spec`
 
-2. 実行ファイルは、`dist` フォルダ内に生成される。
+2. 実行ファイルは、distフォルダ内に生成される。
 
 == 使用方法
-生成された実行ファイルを実行してください。実行ファイルは、`dist` ディレクトリ内に生成される。
-実行ファイルを`dist` ディレクトリから移動させる場合は、`OMS_Document_Check_Tool` フォルダごと移動する。
+生成された実行ファイルを実行してください。実行ファイルは、distディレクトリ内に生成される。
+実行ファイルをdistディレクトリから移動させる場合は、OMS_Document_Check_Toolフォルダごと移動する。
 
 `.\dist\OMS_Document_Check_Tool\OMS_Document_Check_Tool.exe`
 
@@ -36,13 +36,13 @@
 この機能は、指定されたOpenAPI定義書に記載されているプロパティの整合性をチェックする。具体的には、以下の処理を行う。
 
 1. **設定の読み込み**:
-   - `review_config.json` からYAMLプロパティのキーを取得し、`exclude_list.json` から除外するプロパティのリストを読み込む。
+   - review_config.jsonからYAMLプロパティのキーを取得し、exclude_list.jsonから除外するプロパティのリストを読み込む。
 
 2. **YAMLファイルの読み込み**:
    - 指定されたファイルパスからYAMLファイルを読み込み、内容を解析する。
 
 3. **プロパティの抽出**:
-   - YAMLデータから`components.schemas` セクションを探し、各スキーマのプロパティを抽出する。
+   - YAMLデータからcomponents.schemasセクションを探し、各スキーマのプロパティを抽出する。
    - 各プロパティについて、指定されたプロパティキーに基づいて、データ型やバリデーション情報を収集する。
    - プロパティの行番号も取得し、後の比較に役立てる。
 
@@ -60,7 +60,7 @@
 この機能は、指定されたアプリケーション定義書に記載されたクラス・メソッドのイン/アウト定義が、他の定義書と整合しているかをチェックする。具体的には、以下の処理を行う。
 
 1. **設定の読み込み**:
-   - `review_config.json` から、アプリケーション定義書のセクションやパラメータのキーを取得する。
+   - review_config.jsonから、アプリケーション定義書のセクションやパラメータのキーを取得する。
 
 2. **ファイルの情報抽出**:
    - 指定されたファイルパスからアプリケーション定義書を読み込み、文書名やセクションを抽出する。
@@ -89,7 +89,7 @@
 この機能は、指定されたデータアクセス定義書に記載されたSQLとERDとの整合性をチェックする。具体的には、以下の処理を行う。
 
 1. **設定の読み込み**:
-   - `review_config.json` から、SQLブロックのプレフィックスやERDのセクション名、カラム名、フィールド名などの設定を読み込む。
+   - review_config.jsonから、SQLブロックのプレフィックスやERDのセクション名、カラム名、フィールド名などの設定を読み込む。
 
 2. **AsciidocからSQLの抽出**:
    - 指定されたAsciidocファイルからSQLブロックを抽出する。SQLブロックは、特定のプレフィックスで始まり、ブロックの開始と終了を示すデリミタで囲まれる。
@@ -135,7 +135,7 @@
 
 - **説明**: 指定されたファイルIDに基づいて、対応するファイルのパスを取得する。
 - **処理内容**:
-  - `upload_file_info.json` からファイル情報を読み込む。
+  - upload_file_info.jsonからファイル情報を読み込む。
   - アプリケーションがフリーズされているかどうかを確認し、適切なベースパスを設定する。
   - ファイルIDに一致するファイル情報を検索し、ファイル名からファイルパスを構築して返す。
   - 一致するファイルが見つからない場合は、空の文字列を返す。
@@ -144,7 +144,7 @@
 
 - **説明**: 指定されたファイルパスに基づいて、ファイルのタイプを取得する。
 - **処理内容**:
-  - `upload_file_info.json` からファイル情報を読み込む。
+  - upload_file_info.jsonからファイル情報を読み込む。
   - 指定されたファイル名に一致するファイル情報を検索し、そのファイルタイプを取得して返す。
   - 一致するファイルが見つからない場合は、空の文字列を返す。
 
